--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM circleci/node:7.10
 WORKDIR /home/circleci
-ADD test.sh test.sh
-CMD ["-c"]
+ADD bin bin
+RUN sudo mv bin/pr-troll /usr/local/bin
