--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: jacekelgda/pr-troll:123asd123asd124
+      - image: jacekelgda/pr-troll:2376eiufweiuyt1376
     working_directory: ~/my-app
     steps:
       - checkout
